============================
django-dynamic-choices changelog
============================

Version 0.1.2:
--------------------------------

* fixed an issue with user defined forms on DynamicAdmin and inlines

Version 0.1.1, 29 December 2010:
--------------------------------

* fixed an issue with formset empty form
* added support for south
* added support for reversion

I'm planing to refactor the code for version 0.2.0 in order to add support for dynamic managers or "model instance managers".
Dynamic choices will be bound to such managers. Data provided will also be wrapped in some class and tuple choices in some kind of QuerysetCollection.
Stay tuned!

Version 0.1.0, 27 December 2010:
--------------------------------

* initial release

At the moment this project is more of a "proof of concept" or exploration in order to find a clever way of adding dynamic model field choices to django.