@@ -6,6 +6,7 @@ Version 0.1.2:
 --------------------------------
 
 * fixed an issue with user defined forms on DynamicAdmin and inlines
+* handle 3+ depth descriptors (field__field__...)
 
 Version 0.1.1, 29 December 2010:
 --------------------------------
